--- a/index.html
+++ b/index.html
@@ -38,10 +38,14 @@
     <!-- Navbar links -->
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="nav navbar-nav ml-auto">
-            <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#HomePage"><i class="fa fa-home"></i> Home</a></li>
-            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#MediaPage" data-dir="Photos"><i class="fa fa-camera"></i> Photos</a></li>
-            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#MediaPage" data-dir="Videos" ><i class="fa fa-video-camera"></i> Videos</a></li>
-            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#MediaPage" data-dir="Music"><i class="fa fa-music"></i> Music</a></li>
+            <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#HomePage"><i class="fa fa-home">
+                </i> Home</a></li>
+            <li class="nav-item"><a class="nav-link media-page" data-toggle="tab" href="#MediaPage" data-dir="Photos">
+                <i class="fa fa-camera"></i> Photos</a></li>
+            <li class="nav-item"><a class="nav-link media-page" data-toggle="tab" href="#MediaPage" data-dir="Videos" >
+                <i class="fa fa-video-camera"></i> Videos</a></li>
+            <li class="nav-item"><a class="nav-link media-page" data-toggle="tab" href="#MediaPage" data-dir="Music">
+                <i class="fa fa-music"></i> Music</a></li>
             <li id="PlaylistNav" class="nav-item d-none"><a class="nav-link" data-toggle="tab" href="#PlaylistPage">
                 <i class="fa fa-spotify"></i> Playlist</a></li>
             <li class="nav-item"><a class="nav-link" id="login" href="#" role="button">login</a></li>
@@ -65,13 +69,12 @@
             width="23%" > 
 		<h1>Welcome!</h1>
         <p>Welcome to the John J Kauflin personal website.</p>
-        <a class="btn btn-info float-left mt-2 mr-2 link-tile" href="index.html?media-dir=Photos">
-            <i class="fa fa-camera fa-2x float-left"></i> Photos</a>
-        <a class="btn btn-info float-left mt-2 mr-2 link-tile" href="index.html?media-dir=Videos">
-            <i class="fa fa-video-camera fa-2x float-left"></i> Videos</a>
-        <a class="btn btn-info float-left mt-2 mr-2 link-tile" href="index.html?media-dir=Music">
-            <i class="fa fa-music fa-2x float-left"></i> Music</a>
-
+        <button class="btn btn-info float-left mt-2 mr-2 link-tile media-page" data-dir="Photos" type="button" role="button">
+            <i class="fa fa-camera fa-2x float-left"></i> Photos</button>
+        <button class="btn btn-info float-left mt-2 mr-2 link-tile media-page" data-dir="Videos" type="button" role="button">
+            <i class="fa fa-video-camera fa-2x float-left"></i> Videos</button>
+        <button class="btn btn-info float-left mt-2 mr-2 link-tile media-page" data-dir="Music" type="button" role="button">
+            <i class="fa fa-music fa-2x float-left"></i> Music</button>
 	</div><!-- end of Home tab -->
 
 	<div class="tab-pane" id="MediaPage">
@@ -174,7 +177,7 @@ in bands with a group of friends since High School and we have created a music c
     -->
     <script src="https://cdn.jsdelivr.net/npm/spotify-web-api-js@1.4.0/src/spotify-web-api.min.js" type="text/javascript"></script>
 
-    <script src="vendor/jkauflin/jjkgallery/mediagallery.js?ver=1.012"></script>
+    <script src="vendor/jkauflin/jjkgallery/mediagallery.js?ver=1.015"></script>
     <script src="vendor/jkauflin/jjklogin/jjklogin.js?ver=1.006"></script>
 
     <script src="js/util.js?ver=3.009"></script>
