--- a/index.html
+++ b/index.html
@@ -62,26 +62,44 @@
 <div class="tab-content">
 
 	<div class="tab-pane show active" id="HomePage">
-        <div id="username" class="float-right"></div>
-        <div id="jjkloginEventElement"></div>
 
-        <img src="Media/images/johnk-headshot.jpg" class="rounded-circle float-left m-3" alt="John Kauflin photo" 
-            width="23%" > 
-		<h1>Welcome!</h1>
-        <p>Welcome to the John J Kauflin personal website.</p>
-        <button class="btn btn-info float-left mt-2 mr-2 link-tile media-page" data-dir="Photos" type="button" role="button">
-            <i class="fa fa-camera fa-2x float-left"></i> Photos</button>
-        <button class="btn btn-info float-left mt-2 mr-2 link-tile media-page" data-dir="Videos" type="button" role="button">
-            <i class="fa fa-video-camera fa-2x float-left"></i> Videos</button>
-        <button class="btn btn-info float-left mt-2 mr-2 link-tile media-page" data-dir="Music" type="button" role="button">
-            <i class="fa fa-music fa-2x float-left"></i> Music</button>
+        <div class="row">
+            <div id="username" class="float-right"></div>
+            <div id="jjkloginEventElement"></div>
 
-        <h5>Solar Power Monitor></h5>
-        <iframe
-            src="emoncms/dashboard/view?id=1&apikey=38618b096c7f94b4bf7ce190af925037"
-            frameborder="1" class="m-2">
-        </iframe>
+            <div class="col-sm-5 col-md-3 d-none d-sm-block">
+                <img src="Media/images/johnk-headshot.jpg" class="rounded-circle float-left mt-3 " alt="John Kauflin photo" width="90%">
+            </div>
 
+            <div class="col-sm-6 col-md-7">
+                <div class="row">
+                    <h1 class="m-2 d-none d-sm-block">Welcome!</h1>
+                    <!--
+                    <h4 class="m-2 d-block d-sm-none">Welcome!</h4>
+                    -->
+                    <p class="m-2">Welcome to the John J Kauflin personal website.</p>
+                    
+                </div>
+
+                <div class="row ml-1 mb-1">
+                    <button class="btn btn-info float-left mt-2 mr-2 link-tile media-page" data-dir="Photos" type="button" role="button">
+                        <i class="fa fa-camera fa-2x float-left"></i> Photos</button>
+                    <button class="btn btn-info float-left mt-2 mr-2 link-tile media-page" data-dir="Videos" type="button" role="button">
+                        <i class="fa fa-video-camera fa-2x float-left"></i> Videos</button>
+                    <button class="btn btn-info float-left mt-2 mr-2 link-tile media-page" data-dir="Music" type="button" role="button">
+                        <i class="fa fa-music fa-2x float-left"></i> Music</button>
+                </div>
+
+                <div class="row">
+                    <iframe src="emoncms/dashboard/view?id=1&apikey=38618b096c7f94b4bf7ce190af925037" frameborder="1" class="m-3" width="100%" height="400">
+                    </iframe>
+                </div>
+
+            </div>
+
+            <div class="col-sm-1 col-md-2 d-none d-sm-block">
+            </div>
+        </div>
 
 	</div><!-- end of Home tab -->
 
