--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/2.35.0/css/blueimp-gallery.min.css">
-    <link rel="stylesheet" href="css/main.css?ver=4.006">
+    <link rel="stylesheet" href="css/main.css?ver=4.010">
 </head>
 
 <body>
@@ -38,7 +38,7 @@
     <!-- Navbar links -->
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="nav navbar-nav ml-auto">
-            <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#HomePage"><i class="fa fa-home">
+            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#HomePage"><i class="fa fa-home">
                 </i> Home</a></li>
             <li class="nav-item"><a class="nav-link media-page" data-toggle="tab" href="#MediaPage" data-dir="Photos">
                 <i class="fa fa-camera"></i> Photos</a></li>
@@ -46,6 +46,8 @@
                 <i class="fa fa-video-camera"></i> Videos</a></li>
             <li class="nav-item"><a class="nav-link media-page" data-toggle="tab" href="#MediaPage" data-dir="Music">
                 <i class="fa fa-music"></i> Music</a></li>
+            <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#BotPage">
+                    <i class="fa fa-android"></i> JokeBot</a></li>
             <li id="PlaylistNav" class="nav-item d-none"><a class="nav-link" data-toggle="tab" href="#PlaylistPage">
                 <i class="fa fa-spotify"></i> Playlist</a></li>
             <li class="nav-item"><a class="nav-link" id="login" href="#" role="button">login</a></li>
@@ -61,7 +63,7 @@
 <div class="container-fluid">
 <div class="tab-content">
 
-	<div class="tab-pane show active" id="HomePage">
+	<div class="tab-pane" id="HomePage">
         <div class="row">
             <div class="col-sm-5 col-md-3 d-none d-sm-block">
                 <img src="Media/images/johnk-headshot.jpg" class="rounded-circle float-left mt-3 " alt="John Kauflin photo" width="90%">
@@ -112,7 +114,52 @@
                 <div id="MediaThumbnails"></div>
             </div>
 		</div><!-- row -->	                
-	</div><!-- end of Detail -->
+	</div><!-- end of Media -->
+
+    <div class="tab-pane show active" id="BotPage">
+        <div class="row">
+			<div class="col-sm-7 col-lg-6">
+                <h5>Joke Bot</h5>
+                <button id="StartButton" type="button" class="btn btn-success shadow-none">Start</button>
+                <button id="StopButton" type="button" class="btn btn-danger shadow-none">Stop</button>
+
+                <form id="SearchInput" class="form-group" action="#">
+                    <div class="input-group mt-2">
+                        <input type="text" class="form-control shadow-none" name="searchStr" id="searchStr"
+                            placeholder="Send text to JokeBot (or push Mic to speak)">
+                        <div class="input-group-append">
+                            <button id="SearchButton" type="button" class="btn btn-primary shadow-none">Send</button>
+                        </div>
+                    </div>
+                </form>
+
+                <div class="row">
+                    <div class="col-5">
+                        <a id="SpeechToTextButton" href="#" class="">
+                            <img id="STTButtonImage" src="Media/images/mic.gif" class="rounded-circle border border-dark border-2">
+                        </a>
+                        <div class="clearfix">
+                            Continuous:
+                            <input type="checkbox" id="ContinuousListening" checked />
+                        </div>
+                    </div>
+
+                    <div class="col-7">
+                        <div id="VerbalRepsonse" class="capitalize">
+                        </div>
+                    </div>
+                </div>
+
+                <div id="results" class="mt-1">
+                    <b class="mr-2">Text:</b><span id="STTResultsSpan" class="final"></span>
+                </div>
+
+			</div>
+			<div class="col-sm-5 col-lg-6">
+                <img src="Media/images/bot.JPG" class="float-left m-2" width="60%">
+            </div>
+		</div><!-- row -->	                
+	</div><!-- end of Bot -->
 
     <div class="tab-pane" id="PlaylistPage">
         <div class="row">
@@ -204,7 +251,10 @@ in bands with a group of friends since High School and we have created a music c
     <script src="js/util.js?ver=3.009"></script>
     <script src="js/main.js?ver=3.009"></script>
     <script src="js/spotify.js?ver=3.010"></script>
+    <script src="js/speech.js?ver=1.102"></script>
+    <script src="js/bot.js?ver=1.102"></script>
     <!--
+    <script src="js/music.js?ver=1.018"></script>
     <script src="js/googleAnalytics.js?ver=1.001"></script>
     <script src="https://www.google-analytics.com/analytics.js" async defer></script>
     -->
