--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@
     <link rel="apple-touch-icon" href="icon.png">
 
     <!-- Bootstrap core CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" 
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" 
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/3.4.0/css/blueimp-gallery.min.css">
-    <link rel="stylesheet" href="css/main.css?ver=4.014">
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
+    <link rel="stylesheet" href="css/main.css?ver=4.015">
 </head>
 
 <body>
@@ -140,6 +139,7 @@
         </div>
     </div>
 
+
     <!--
     <div class="tab-pane" id="BotPage">
         <div class="row">
@@ -205,7 +205,6 @@
 	</div>
     -->
 
-
     <div class="tab-pane" id="InfoPage">
         <div class="row">
 			<div class="col-sm-7 col-lg-6">
@@ -233,61 +232,23 @@ and being part of a wonderful music community
 </div><!-- end of main tab content -->
 </div><!-- end of main container -->
 
-    <!-- The Gallery as lightbox dialog, should be a document body child element -->
-    <div
-    id="blueimp-gallery"
-    class="blueimp-gallery blueimp-gallery-contain"
-    aria-label="image gallery"
-    aria-modal="true"
-    role="dialog"
-    >
-    <div class="slides" aria-live="polite"></div>
-        <h3 class="title"></h3>
-        <a
-            class="prev"
-            aria-controls="blueimp-gallery"
-            aria-label="previous slide"
-            aria-keyshortcuts="ArrowLeft"
-        ></a>
-        <a
-            class="next"
-            aria-controls="blueimp-gallery"
-            aria-label="next slide"
-            aria-keyshortcuts="ArrowRight"
-        ></a>
-        <a
-            class="close"
-            aria-controls="blueimp-gallery"
-            aria-label="close"
-            aria-keyshortcuts="Escape"
-        ></a>
-        <a
-            class="play-pause"
-            aria-controls="blueimp-gallery"
-            aria-label="play slideshow"
-            aria-keyshortcuts="Space"
-            aria-pressed="false"
-            role="button"
-        ></a>
-        <ol class="indicator"></ol>
-    </div>
 
     <!-- Bootstrap core JavaScript ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <!-- Bootstrap 5 JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-gallery/3.4.0/js/blueimp-gallery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" 
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bs5-lightbox@1.8.3/dist/index.bundle.min.js" type="module"></script>
     <!--
     <script src="https://unpkg.com/rivescript@latest/dist/rivescript.min.js" type="text/javascript"></script>
     <script src="https://sdk.scdn.co/spotify-player.js" type="text/javascript"></script>
     <script src="https://cdn.jsdelivr.net/npm/spotify-web-api-js@1.4.0/src/spotify-web-api.min.js" type="text/javascript"></script>
     -->
     <script src="vendor/jkauflin/jjklogin/jjklogin.js?ver=1.020"></script>
-    <script src="vendor/jkauflin/jjkgallery/mediagallery.js?ver=3.210"></script>
-    <script src="js/main.js?ver=3.022"></script>
+    <script src="vendor/jkauflin/jjkgallery/mediagallery.js?ver=3.219" type="module"></script>
+    <script src="js/main.js?ver=3.030" type="module"></script>
+
     <!--
-    <script src="js/util.js?ver=3.018"></script>
     <script src="js/spotify.js?ver=3.011"></script>
     <script src="js/speech.js?ver=1.106"></script>
     <script src="js/bot.js?ver=1.109"></script>
