--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous" />
-    <link rel="stylesheet" href="css/main.css?ver=4.015">
+    <link rel="stylesheet" href="css/main.css?ver=4.018">
 </head>
 
 <body>
@@ -63,12 +63,32 @@
     </div>
 </nav>
 
+                            <!--
+                        <button class="btn btn-success mt-2 mr-2 link-tile-tab" data-dir="Bot" type="button" role="button">
+                            <i class="fa fa-android fa-2x float-start"></i> JokeBot</button>
+                            -->
 
 <div class="container-fluid">
 <div class="tab-content">
 
 	<div class="tab-pane show active" id="HomePage">
         <div class="row">
+
+            <!--
+            <div class="col-8">
+                <img src=" Media/Photos/2023/20230111_170418478_iOS.jpg" class="rounded float-start m-1" width="20%">
+            </div>
+            <div class="col-4">
+                <img src=" Media/Photos/2023/20230122_004232072_iOS.jpg" class="rounded float-start m-1" width="20%">
+            </div>
+
+                <img src=" Media/Photos/2023/20230122_004232072_iOS.jpg" class="rounded float-start mt-2 me-2 jjk-thumb">
+            
+            <div class="col">
+                <img src=" Media/Photos/2023/20230111_170418478_iOS.jpg" class="rounded float-start mt-2 me-2 jjk-thumb">
+            </div>
+            -->
+
             <div class="col-sm-5 col-md-3 d-none d-sm-block">
                 <img src="Media/images/johnk-headshot.jpg" class="rounded-circle float-start mt-3 " alt="John Kauflin photo" width="90%">
                 <h1 class="ml-2">Welcome!</h1>
@@ -87,10 +107,6 @@
                             <i class="fa fa-video-camera fa-2x float-start"></i> Videos</button>
                         <button class="btn btn-success mt-2 mr-2 link-tile-tab media-page" data-MediaType="3" type="button" role="button">
                             <i class="fa fa-music fa-2x float-start"></i> Music</button>
-                            <!--
-                        <button class="btn btn-success mt-2 mr-2 link-tile-tab" data-dir="Bot" type="button" role="button">
-                            <i class="fa fa-android fa-2x float-start"></i> JokeBot</button>
-                            -->
                     </div>
                 </div>
 
@@ -104,6 +120,7 @@
             <div class="col-sm-1 col-md-1 d-none d-sm-block">
                 <div id="jjkloginEventElement" class="float-end"></div>
             </div>
+            
         </div>
 
 	</div><!-- end of Home tab -->
@@ -134,6 +151,30 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+    </div>
+    <!--
+                    <button class="btn-dark btn-outline-none float-start shadow-none" type="button" role="button">
+                    <i class="fa fa-angle-left fa-5x" style="background-color: black;"></i></button>
+
+                <div class="input-group float-start">
+                    <button class="btn-dark btn-outline-dark float-start shadow-none align-middle" style="background-color: black;" type="button" role="button">
+                        <i class="fa fa-angle-left fa-5x" style="background-color: black;"></i>
+                    </button>
+
+                    <button class="btn-dark" type="button" role="button">
+                        >
+                    </button>
+                </div>
+    -->
+    <div class="modal" tabindex="-1" id="MediaLightbox"  data-bs-theme="dark">
+        <div class="modal-dialog modal-fullscreen">
+          <div class="modal-content">
+            <div class="modal-body">
+                <button type="button" class="btn-close float-end" data-bs-dismiss="modal" aria-label="Close"></button>
+                <div id="MediaLightboxBody"></div>
             </div>
           </div>
         </div>
@@ -245,7 +286,7 @@ and being part of a wonderful music community
     <script src="https://cdn.jsdelivr.net/npm/spotify-web-api-js@1.4.0/src/spotify-web-api.min.js" type="text/javascript"></script>
     -->
     <script src="vendor/jkauflin/jjklogin/jjklogin.js?ver=1.020"></script>
-    <script src="vendor/jkauflin/jjkgallery/mediagallery.js?ver=3.219" type="module"></script>
+    <script src="vendor/jkauflin/jjkgallery/mediagallery.js?ver=3.222" type="module"></script>
     <script src="js/main.js?ver=3.030" type="module"></script>
 
     <!--
