--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 	<title>John J Kauflin</title>
-	<meta name="keywords" content="kauflin, jkauflin, jkauflin.com, johnkauflin, johnkauflin.com, john kauflin, john j kauflin, jjk, dayton, oh, ohio, personal, web" />
+	<meta name="keywords" content="kauflin, jkauflin, jkauflin.com, johnkauflin, johnkauflin.com, john kauflin, john j kauflin, jjk, dayton, oh, ohio, personal, web, van kauflin" />
 	<meta name="description" content="John J Kauflin personal website" />
 	<meta name="author" content="John J Kauflin" />
 	<meta property="og:url" content="https://johnkauflin.com" />
@@ -292,7 +292,7 @@ and being part of a wonderful music community
     <script src="https://cdn.jsdelivr.net/npm/spotify-web-api-js@1.4.0/src/spotify-web-api.min.js" type="text/javascript"></script>
     -->
     <script src="vendor/jkauflin/jjklogin/jjklogin.js?ver=1.020"></script>
-    <script src="vendor/jkauflin/jjkgallery/mediagallery.js?ver=3.256" type="module"></script>
+    <script src="vendor/jkauflin/jjkgallery/mediagallery.js?ver=3.258" type="module"></script>
     <script src="js/main.js?ver=3.030" type="module"></script>
 
     <!--
