--- a/index.html
+++ b/index.html
@@ -155,18 +155,7 @@
               <h5 id="MediaModalTitle" class="modal-title"></h5>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
-                <div class="row">
-                    <div class="col">
-                        <div id="MediaModalImg"></div>
-                    </div>
-                    <div class="col">
-                        <div id="MediaModalBody"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <div id="MediaModalBody" class="modal-body">
             </div>
           </div>
         </div>
@@ -288,7 +277,7 @@ and being part of a wonderful music community
     <script src="https://cdn.jsdelivr.net/npm/spotify-web-api-js@1.4.0/src/spotify-web-api.min.js" type="text/javascript"></script>
     -->
     <script src="vendor/jkauflin/jjklogin/jjklogin.js?ver=1.020"></script>
-    <script src="vendor/jkauflin/jjkgallery/mediagallery.js?ver=3.289" type="module"></script>
+    <script src="vendor/jkauflin/jjkgallery/mediagallery.js?ver=3.303" type="module"></script>
     <script src="js/main.js?ver=3.031" type="module"></script>
 
     <!--
